q3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     var_assign -> VAR EQU expression
Rule 5     expression -> expression POW expression
Rule 6     expression -> expression MUL expression
Rule 7     expression -> expression DIV expression
Rule 8     expression -> expression INTDIV expression
Rule 9     expression -> expression SUB expression
Rule 10    expression -> expression ADD expression
Rule 11    expression -> expression GREATER expression
Rule 12    expression -> expression GREATEREQU expression
Rule 13    expression -> expression LESS expression
Rule 14    expression -> expression LESSEUQ expression
Rule 15    expression -> expression EQUEQU expression
Rule 16    expression -> expression NOTEQU expression
Rule 17    expression -> INT
Rule 18    expression -> FLOAT
Rule 19    expression -> SCI
Rule 20    expression -> parentheses
Rule 21    parentheses -> LPAREN expression RPAREN
Rule 22    expression -> VAR
Rule 23    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 10
DIV                  : 7
EQU                  : 4
EQUEQU               : 15
FLOAT                : 18
GREATER              : 11
GREATEREQU           : 12
INT                  : 17
INTDIV               : 8
LESS                 : 13
LESSEUQ              : 14
LPAREN               : 21
MUL                  : 6
NOTEQU               : 16
POW                  : 5
RPAREN               : 21
SCI                  : 19
SUB                  : 9
VAR                  : 4 22
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 21
parentheses          : 20
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (4) var_assign -> . VAR EQU expression
    (23) empty -> .
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 9
    $end            reduce using rule 23 (empty -> .)
    LPAREN          shift and go to state 10

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4
    parentheses                    shift and go to state 8

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (5) expression -> expression . POW expression
    (6) expression -> expression . MUL expression
    (7) expression -> expression . DIV expression
    (8) expression -> expression . INTDIV expression
    (9) expression -> expression . SUB expression
    (10) expression -> expression . ADD expression
    (11) expression -> expression . GREATER expression
    (12) expression -> expression . GREATEREQU expression
    (13) expression -> expression . LESS expression
    (14) expression -> expression . LESSEUQ expression
    (15) expression -> expression . EQUEQU expression
    (16) expression -> expression . NOTEQU expression

    $end            reduce using rule 1 (calc -> expression .)
    POW             shift and go to state 11
    MUL             shift and go to state 12
    DIV             shift and go to state 13
    INTDIV          shift and go to state 14
    SUB             shift and go to state 15
    ADD             shift and go to state 16
    GREATER         shift and go to state 17
    GREATEREQU      shift and go to state 18
    LESS            shift and go to state 19
    LESSEUQ         shift and go to state 20
    EQUEQU          shift and go to state 21
    NOTEQU          shift and go to state 22


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (17) expression -> INT .

    POW             reduce using rule 17 (expression -> INT .)
    MUL             reduce using rule 17 (expression -> INT .)
    DIV             reduce using rule 17 (expression -> INT .)
    INTDIV          reduce using rule 17 (expression -> INT .)
    SUB             reduce using rule 17 (expression -> INT .)
    ADD             reduce using rule 17 (expression -> INT .)
    GREATER         reduce using rule 17 (expression -> INT .)
    GREATEREQU      reduce using rule 17 (expression -> INT .)
    LESS            reduce using rule 17 (expression -> INT .)
    LESSEUQ         reduce using rule 17 (expression -> INT .)
    EQUEQU          reduce using rule 17 (expression -> INT .)
    NOTEQU          reduce using rule 17 (expression -> INT .)
    $end            reduce using rule 17 (expression -> INT .)
    RPAREN          reduce using rule 17 (expression -> INT .)


state 6

    (18) expression -> FLOAT .

    POW             reduce using rule 18 (expression -> FLOAT .)
    MUL             reduce using rule 18 (expression -> FLOAT .)
    DIV             reduce using rule 18 (expression -> FLOAT .)
    INTDIV          reduce using rule 18 (expression -> FLOAT .)
    SUB             reduce using rule 18 (expression -> FLOAT .)
    ADD             reduce using rule 18 (expression -> FLOAT .)
    GREATER         reduce using rule 18 (expression -> FLOAT .)
    GREATEREQU      reduce using rule 18 (expression -> FLOAT .)
    LESS            reduce using rule 18 (expression -> FLOAT .)
    LESSEUQ         reduce using rule 18 (expression -> FLOAT .)
    EQUEQU          reduce using rule 18 (expression -> FLOAT .)
    NOTEQU          reduce using rule 18 (expression -> FLOAT .)
    $end            reduce using rule 18 (expression -> FLOAT .)
    RPAREN          reduce using rule 18 (expression -> FLOAT .)


state 7

    (19) expression -> SCI .

    POW             reduce using rule 19 (expression -> SCI .)
    MUL             reduce using rule 19 (expression -> SCI .)
    DIV             reduce using rule 19 (expression -> SCI .)
    INTDIV          reduce using rule 19 (expression -> SCI .)
    SUB             reduce using rule 19 (expression -> SCI .)
    ADD             reduce using rule 19 (expression -> SCI .)
    GREATER         reduce using rule 19 (expression -> SCI .)
    GREATEREQU      reduce using rule 19 (expression -> SCI .)
    LESS            reduce using rule 19 (expression -> SCI .)
    LESSEUQ         reduce using rule 19 (expression -> SCI .)
    EQUEQU          reduce using rule 19 (expression -> SCI .)
    NOTEQU          reduce using rule 19 (expression -> SCI .)
    $end            reduce using rule 19 (expression -> SCI .)
    RPAREN          reduce using rule 19 (expression -> SCI .)


state 8

    (20) expression -> parentheses .

    POW             reduce using rule 20 (expression -> parentheses .)
    MUL             reduce using rule 20 (expression -> parentheses .)
    DIV             reduce using rule 20 (expression -> parentheses .)
    INTDIV          reduce using rule 20 (expression -> parentheses .)
    SUB             reduce using rule 20 (expression -> parentheses .)
    ADD             reduce using rule 20 (expression -> parentheses .)
    GREATER         reduce using rule 20 (expression -> parentheses .)
    GREATEREQU      reduce using rule 20 (expression -> parentheses .)
    LESS            reduce using rule 20 (expression -> parentheses .)
    LESSEUQ         reduce using rule 20 (expression -> parentheses .)
    EQUEQU          reduce using rule 20 (expression -> parentheses .)
    NOTEQU          reduce using rule 20 (expression -> parentheses .)
    $end            reduce using rule 20 (expression -> parentheses .)
    RPAREN          reduce using rule 20 (expression -> parentheses .)


state 9

    (22) expression -> VAR .
    (4) var_assign -> VAR . EQU expression

    POW             reduce using rule 22 (expression -> VAR .)
    MUL             reduce using rule 22 (expression -> VAR .)
    DIV             reduce using rule 22 (expression -> VAR .)
    INTDIV          reduce using rule 22 (expression -> VAR .)
    SUB             reduce using rule 22 (expression -> VAR .)
    ADD             reduce using rule 22 (expression -> VAR .)
    GREATER         reduce using rule 22 (expression -> VAR .)
    GREATEREQU      reduce using rule 22 (expression -> VAR .)
    LESS            reduce using rule 22 (expression -> VAR .)
    LESSEUQ         reduce using rule 22 (expression -> VAR .)
    EQUEQU          reduce using rule 22 (expression -> VAR .)
    NOTEQU          reduce using rule 22 (expression -> VAR .)
    $end            reduce using rule 22 (expression -> VAR .)
    EQU             shift and go to state 23


state 10

    (21) parentheses -> LPAREN . expression RPAREN
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 24
    parentheses                    shift and go to state 8

state 11

    (5) expression -> expression POW . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 26
    parentheses                    shift and go to state 8

state 12

    (6) expression -> expression MUL . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 27
    parentheses                    shift and go to state 8

state 13

    (7) expression -> expression DIV . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 28
    parentheses                    shift and go to state 8

state 14

    (8) expression -> expression INTDIV . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 29
    parentheses                    shift and go to state 8

state 15

    (9) expression -> expression SUB . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 30
    parentheses                    shift and go to state 8

state 16

    (10) expression -> expression ADD . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 31
    parentheses                    shift and go to state 8

state 17

    (11) expression -> expression GREATER . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 32
    parentheses                    shift and go to state 8

state 18

    (12) expression -> expression GREATEREQU . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 33
    parentheses                    shift and go to state 8

state 19

    (13) expression -> expression LESS . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 34
    parentheses                    shift and go to state 8

state 20

    (14) expression -> expression LESSEUQ . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 35
    parentheses                    shift and go to state 8

state 21

    (15) expression -> expression EQUEQU . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 36
    parentheses                    shift and go to state 8

state 22

    (16) expression -> expression NOTEQU . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 37
    parentheses                    shift and go to state 8

state 23

    (4) var_assign -> VAR EQU . expression
    (5) expression -> . expression POW expression
    (6) expression -> . expression MUL expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression INTDIV expression
    (9) expression -> . expression SUB expression
    (10) expression -> . expression ADD expression
    (11) expression -> . expression GREATER expression
    (12) expression -> . expression GREATEREQU expression
    (13) expression -> . expression LESS expression
    (14) expression -> . expression LESSEUQ expression
    (15) expression -> . expression EQUEQU expression
    (16) expression -> . expression NOTEQU expression
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . SCI
    (20) expression -> . parentheses
    (22) expression -> . VAR
    (21) parentheses -> . LPAREN expression RPAREN

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    SCI             shift and go to state 7
    VAR             shift and go to state 25
    LPAREN          shift and go to state 10

    expression                     shift and go to state 38
    parentheses                    shift and go to state 8

state 24

    (21) parentheses -> LPAREN expression . RPAREN
    (5) expression -> expression . POW expression
    (6) expression -> expression . MUL expression
    (7) expression -> expression . DIV expression
    (8) expression -> expression . INTDIV expression
    (9) expression -> expression . SUB expression
    (10) expression -> expression . ADD expression
    (11) expression -> expression . GREATER expression
    (12) expression -> expression . GREATEREQU expression
    (13) expression -> expression . LESS expression
    (14) expression -> expression . LESSEUQ expression
    (15) expression -> expression . EQUEQU expression
    (16) expression -> expression . NOTEQU expression

    RPAREN          shift and go to state 39
    POW             shift and go to state 11
    MUL             shift and go to state 12
    DIV             shift and go to state 13
    INTDIV          shift and go to state 14
    SUB             shift and go to state 15
    ADD             shift and go to state 16
    GREATER         shift and go to state 17
    GREATEREQU      shift and go to state 18
    LESS            shift and go to state 19
    LESSEUQ         shift and go to state 20
    EQUEQU          shift and go to state 21
    NOTEQU          shift and go to state 22


state 25

    (22) expression -> VAR .

    RPAREN          reduce using rule 22 (expression -> VAR .)
    POW             reduce using rule 22 (expression -> VAR .)
    MUL             reduce using rule 22 (expression -> VAR .)
    DIV             reduce using rule 22 (expression -> VAR .)
    INTDIV          reduce using rule 22 (expression -> VAR .)
    SUB             reduce using rule 22 (expression -> VAR .)
    ADD             reduce using rule 22 (expression -> VAR .)
    GREATER         reduce using rule 22 (expression -> VAR .)
    GREATEREQU      reduce using rule 22 (expression -> VAR .)
    LESS            reduce using rule 22 (expression -> VAR .)
    LESSEUQ         reduce using rule 22 (expression -> VAR .)
    EQUEQU          reduce using rule 22 (expression -> VAR .)
    NOTEQU          reduce using rule 22 (expression -> VAR .)
    $end            reduce using rule 22 (expression -> VAR .)


state 26

    (5) expression -> expression POW expression .
    (5) expression -> expression . POW expression
    (6) expression -> expression . MUL expression
    (7) expression -> expression . DIV expression
    (8) expression -> expression . INTDIV expression
    (9) expression -> expression . SUB expression
    (10) expression -> expression . ADD expression
    (11) expression -> expression . GREATER expression
    (12) expression -> expression . GREATEREQU expression
    (13) expression -> expression . LESS expression
    (14) expression -> expression . LESSEUQ expression
    (15) expression -> expression . EQUEQU expression
    (16) expression -> expression . NOTEQU expression

    POW             reduce using rule 5 (expression -> expression POW expression .)
    MUL             reduce using rule 5 (expression -> expression POW expression .)
    DIV             reduce using rule 5 (expression -> expression POW expression .)
    INTDIV          reduce using rule 5 (expression -> expression POW expression .)
    SUB             reduce using rule 5 (expression -> expression POW expression .)
    ADD             reduce using rule 5 (expression -> expression POW expression .)
    GREATER         reduce using rule 5 (expression -> expression POW expression .)
    GREATEREQU      reduce using rule 5 (expression -> expression POW expression .)
    LESS            reduce using rule 5 (expression -> expression POW expression .)
    LESSEUQ         reduce using rule 5 (expression -> expression POW expression .)
    EQUEQU          reduce using rule 5 (expression -> expression POW expression .)
    NOTEQU          reduce using rule 5 (expression -> expression POW expression .)
    $end            reduce using rule 5 (expression -> expression POW expression .)
    RPAREN          reduce using rule 5 (expression -> expression POW expression .)

  ! POW             [ shift and go to state 11 ]
  ! MUL             [ shift and go to state 12 ]
  ! DIV             [ shift and go to state 13 ]
  ! INTDIV          [ shift and go to state 14 ]
  ! SUB             [ shift and go to state 15 ]
  ! ADD             [ shift and go to state 16 ]
  ! GREATER         [ shift and go to state 17 ]
  ! GREATEREQU      [ shift and go to state 18 ]
  ! LESS            [ shift and go to state 19 ]
  ! LESSEUQ         [ shift and go to state 20 ]
  ! EQUEQU          [ shift and go to state 21 ]
  ! NOTEQU          [ shift and go to state 22 ]


state 27

    (6) expression -> expression MUL expression .
    (5) expression -> expression . POW expression
    (6) expression -> expression . MUL expression
    (7) expression -> expression . DIV expression
    (8) expression -> expression . INTDIV expression
    (9) expression -> expression . SUB expression
    (10) expression -> expression . ADD expression
    (11) expression -> expression . GREATER expression
    (12) expression -> expression . GREATEREQU expression
    (13) expression -> expression . LESS expression
    (14) expression -> expression . LESSEUQ expression
    (15) expression -> expression . EQUEQU expression
    (16) expression -> expression . NOTEQU expression

    MUL             reduce using rule 6 (expression -> expression MUL expression .)
    DIV             reduce using rule 6 (expression -> expression MUL expression .)
    INTDIV          reduce using rule 6 (expression -> expression MUL expression .)
    SUB             reduce using rule 6 (expression -> expression MUL expression .)
    ADD             reduce using rule 6 (expression -> expression MUL expression .)
    GREATER         reduce using rule 6 (expression -> expression MUL expression .)
    GREATEREQU      reduce using rule 6 (expression -> expression MUL expression .)
    LESS            reduce using rule 6 (expression -> expression MUL expression .)
    LESSEUQ         reduce using rule 6 (expression -> expression MUL expression .)
    EQUEQU          reduce using rule 6 (expression -> expression MUL expression .)
    NOTEQU          reduce using rule 6 (expression -> expression MUL expression .)
    $end            reduce using rule 6 (expression -> expression MUL expression .)
    RPAREN          reduce using rule 6 (expression -> expression MUL expression .)
    POW             shift and go to state 11

  ! POW             [ reduce using rule 6 (expression -> expression MUL expression .) ]
  ! MUL             [ shift and go to state 12 ]
  ! DIV             [ shift and go to state 13 ]
  ! INTDIV          [ shift and go to state 14 ]
  ! SUB             [ shift and go to state 15 ]
  ! ADD             [ shift and go to state 16 ]
  ! GREATER         [ shift and go to state 17 ]
  ! GREATEREQU      [ shift and go to state 18 ]
  ! LESS            [ shift and go to state 19 ]
  ! LESSEUQ         [ shift and go to state 20 ]
  ! EQUEQU          [ shift and go to state 21 ]
  ! NOTEQU          [ shift and go to state 22 ]


state 28
